# dio-basic-bank-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
basic-bank/: requirements.txt  run.sh
